[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/Scorecard/HoleScore.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Fonts/ScorecardFont.tres" type="DynamicFont" id=2]

[node name="HoleScore" type="VBoxContainer"]
margin_right = 208.0
margin_bottom = 120.0
size_flags_horizontal = 3
custom_constants/separation = -3
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
albatross = Color( 0.12549, 0.839216, 0.780392, 1 )
eagle = Color( 0.141176, 0.623529, 0.870588, 1 )
birdie = Color( 0.156863, 0.360784, 0.768627, 1 )
par = Color( 1, 1, 1, 1 )
bogie = Color( 0.976471, 0.639216, 0.105882, 1 )
double_bogie = Color( 0.980392, 0.415686, 0.0392157, 1 )
triple_bogie = Color( 0.87451, 0.243137, 0.137255, 1 )
quadra_bogie = Color( 0.705882, 0.12549, 0.164706, 1 )
penta_bogie = Color( 0.45098, 0.0901961, 0.176471, 1 )

[node name="HoleNumberLabel" type="Label" parent="."]
margin_top = 18.0
margin_right = 208.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="ParLabel" type="Label" parent="."]
margin_top = 45.0
margin_right = 208.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="."]
margin_top = 72.0
margin_right = 208.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
